# contract-xray

./: .env.example  README.md  pyproject.toml
src/contract_xray/: __init__.py  cli.py  etherscan.py  report.py  slither_wrapper.py
src/contract_xray/rules/: __init__.py  base.py  excessive_sell_tax.py  hidden_blacklist.py  unrenounced_ownership.py  unrestricted_mint.py
tests/: conftest.py  test_rules.py
